chore: first release, implement me endpoint and integrate auth
